k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-hostname
  namespace: node-hostname
  labels:
    app: node-hostname
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-hostname
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: node-hostname
    spec:
      containers:
        - name: node-hostname
          image: docker.io/chanh/node-hostname:0.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
