k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-hostname
  namespace: node-hostname
spec:
  type: NodePort
  selector:
    app: node-hostname
  ports:
    - name: http
      port: 80
      targetPort: 3000
      nodePort: 30080
