k8s/service_Ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-hostname
  namespace: node-hostname
spec:
  type: ClusterIP
  selector:
    app: node-hostname
  ports:
    - name: http
      port: 80
      targetPort: 3000
